<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

    <com.firemanagement.view.CustomTitleBar
        android:id="@+id/tv_seting_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:leftTextSize="@dimen/dp_20"
        app:middleTitle="@string/set_title"
        app:leftImage="@drawable/go_back"
        />

<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/fillet"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/dp_20"
    android:layout_marginBottom="@dimen/dp_20"
   android:padding="@dimen/dp_10"
    android:elevation="@dimen/dp_5"
    />
<TextView
    android:id="@+id/tv_VersionNumber"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:textColor="@color/write"
    android:textSize="@dimen/dp_16"
    android:text="版本号 1.0.0"
    android:layout_margin="@dimen/dp_6"
    />
<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="@dimen/dp_5"
    app:contentPadding="@dimen/dp_10"
    >
    <TextView
        android:id="@+id/tv_feedback"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="@dimen/dp_16"
        android:textColor="@color/write"
        android:text="@string/feedback"
        android:drawableRight="@drawable/enter"
        android:gravity="center_vertical|left"
        />
</android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="@dimen/dp_5"
        app:contentPadding="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginBottom="@dimen/dp_15"
        >
        <TextView
            android:id="@+id/tv_CheckForUpdates"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/dp_16"
            android:textColor="@color/write"
            android:text="@string/CheckForUpdates"
            android:drawableRight="@drawable/enter"
            android:gravity="center_vertical|left"

            />
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="@dimen/dp_5"
        app:contentPadding="@dimen/dp_10"
        >
        <TextView
            android:id="@+id/tv_SoftwareDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/dp_16"
            android:textColor="@color/write"
            android:text="@string/SoftwareDescription"
            android:drawableRight="@drawable/enter"
            android:gravity="center_vertical|left"
            />
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="@dimen/dp_5"
        app:contentPadding="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_25"
        >
        <TextView
            android:id="@+id/tv_logout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/dp_16"
            android:textColor="@color/write"
            android:text="@string/logout"
            android:gravity="center"
            />
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="@dimen/dp_5"
        app:contentPadding="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_2"
        >
        <TextView
            android:id="@+id/tv_SignOut"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/dp_16"
            android:textColor="@color/write"
            android:text="@string/SignOut"
            android:gravity="center"
            />
    </android.support.v7.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center_horizontal"
        android:padding="@dimen/dp_8"
        android:textColor="#797878"
        android:text="开发人员：XXXXXXXXXX"
        />
</LinearLayout>